# research-javascript-test-smells

llm-refactor-pipeline/: .env.example  .gitignore  CHECK_REPOSITORIES_GUIDE.md  CHECK_REPOSITORIES_SUMMARY.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  USAGE_EXAMPLES.md  UTILS_REUSABILITY_EXAMPLE.md  pyproject.toml  requirements.txt  test_cli.py
llm-refactor-pipeline/src/llm_refactor/: __init__.py  __main__.py
llm-refactor-pipeline/src/llm_refactor/cli/: __init__.py  renderer.py  repl.py  router.py
llm-refactor-pipeline/src/llm_refactor/core/: __init__.py  config.py
llm-refactor-pipeline/src/llm_refactor/modules/: __init__.py  base.py  check_repositories.py  check_repositories_utils.py  hello_world.py
llm-refactor-pipeline/src/llm_refactor/modules/detect_smells/: __init__.py  concatenate_csv.py  detect_smells.py  snuts_runner.py  steel_runner.py  utils.py
llm-refactor-pipeline/src/llm_refactor/modules/detect_smells/get_method/: extract_method.js  package.json
llm-refactor-pipeline/src/llm_refactor/modules/run_tests/: __init__.py  run_tests.py
repositories/apexcharts.js/: jest.config.js
repositories/chart.js/: .testrc  karma.conf.cjs  package.json  run-unit-tests.sh
repositories/codecombat/: karma.conf.js
repositories/hello-javascript/: package.json
repositories/jasmine/: package.json
repositories/jsdoc/: Herebyfile.js
repositories/lozad.js/: package.json  rollup.config.js
repositories/moleculer/: package.json
repositories/parse-server/: .gitignore  .npmignore  .releaserc.js  8.0.0.md  CHANGELOG.md  (+7 more)
scripts/: check_smells.py
(+411 files in other folders)
