[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-refactor"
version = "0.1.0"
description = "Interactive CLI tool for LLM-based code refactoring research"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Research Team"}
]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
llm-refactor = "llm_refactor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_refactor = ["py.typed"]
